@@ -2,6 +2,8 @@
 Support WebClientPort in Get-Tests / Run-Tests (Issue #617)
 Support ReplaceDependencies on functions when publishing apps to containers with custom BaseApp
 Issue #616 add PreserveFormatting
+Issue #622 wrong variable passed in Get-NavContainerAppRuntimePackage
+Added function Replace-DependenciesInAppFile to replace dependencies to f.ex. BaseApp with custom BaseApp
 
 0.6.4.1
 Add parameter finalizeDatabasesScriptBlock to New-BcContainer
